--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@nandorojo/swr-firestore": "^0.16.0",
     "firebase": "^9.22.1",
+    "http-proxy-middleware": "^3.0.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "styled-components": "^5.3.11",
-    "swr": "^2.1.5",
+
     "uuid": "^9.0.0"
   },
   "devDependencies": {
